package com.example.thetrempiada.enums;

public enum Gender {
    MALE, FEMALE
}
