package com.example.thetrempiada.enums;

public enum UserType {
    DRIVER, TREMPIST, BOTH
}
